<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/topBun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/top_of_the_bun"
        android:paddingTop="50dp"
        app:srcCompat="@drawable/topbun" />

    <RadioGroup
        android:id="@+id/meatGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/topBun"
        android:layout_centerHorizontal="true"
        android:paddingTop="15dp">

        <RadioButton
            android:id="@+id/beefRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/beef_patty" />

        <RadioButton
            android:id="@+id/lambRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lamb_patty" />

        <RadioButton
            android:id="@+id/ostrichRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ostrich_patty" />


    </RadioGroup>

    <CheckBox
        android:id="@+id/proscuittoCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/meatGroup"
        android:layout_centerHorizontal="true"
        android:text="@string/proscuitto" />

    <RadioGroup
        android:id="@+id/chesseGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/proscuittoCheckBox"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/cheddarRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/cheddar" />

        <RadioButton
            android:id="@+id/provoloneRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/provolone" />

    </RadioGroup>

    <TextView
        android:id="@+id/sauceStatusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/chesseGroup"
        android:layout_centerHorizontal="true"
        android:text="@string/sauce"
        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    <SeekBar

        android:id="@+id/sauceSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sauceStatusTextView"
        android:layout_alignLeft="@id/chesseGroup"
        android:layout_alignRight="@id/chesseGroup" />

    <ImageView
        android:id="@+id/bottomBun"
        android:contentDescription="@string/bottom_of_hamburger_bun"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/sauceSeekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/bottombun" />

    <TextView
        android:id="@+id/calorieTextView"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="200dp"
        android:text="@string/calories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</RelativeLayout>